--- a/README
+++ b/README
@@ -11,6 +11,12 @@ WANG, Zixu, 3035140067
 
 # Welcome to CoPainter!
 
+CoPainter is a online painting software which allows you to
+draw things with your friends over the Internet.
+
+It supports multi-client connection, full-color and size brushes, and file saving/loading.
+It runs on different platforms as it is written in pure Java.
+
 ## Connection:
 
 If you start the CoPainter as a server/host,
